# MCP-Mastery-with-Claude-and-Langchain

./: .gitignore  claude_desktop_config.json  main.py  pyproject.toml
01 Introduction/: 1-anaconda nodejs claude install.html  2-uv_vs_pip.html
03 Build Your First MCP Server/demo-server/: client_fastmcp.py  client_mcp.py  server.py
04 MCP Servers and Local Agent/: advanced_agentic_client.py  agentic_client.py  mcp-http.json  mcp.json
04 MCP Servers and Local Agent/servers/: math_server.py  weather_server.py
05 MCP Servers with Claude Desktop/: math_server.py  weather_server.py
06 MCP Servers for Data Analysis/data/: Support_Tickets_Analysis_Report.pptx  support_tickets_data.xlsx
07 MCP Tools Resources and Prompts/: mcp_tools_resources_prompts_presentation.html  server.py
07 MCP Tools Resources and Prompts/jobs/temp/: fetched_jobs_temp.json
07 MCP Tools Resources and Prompts/presentation/tmp/: fetched_jobs_temp.json
08 MCP RAG with LangChain/: app.py  server.py
08 MCP RAG with LangChain/chroma_db/: chroma.sqlite3
08 MCP RAG with LangChain/presentation/: mcp_rag_architecture.html
09 Research Assistant with MCP and LangGraph/: client.py  server.py
09 Research Assistant with MCP and LangGraph/presentation/: research_assistant.html
09 Research Assistant with MCP and LangGraph/research_chroma_dbs/Apple-Stock-Analysis/: content_hashes.json
09 Research Assistant with MCP and LangGraph/research_chroma_dbs/IRCON_Stock_Outlook/: content_hashes.json
09 Research Assistant with MCP and LangGraph/research_chroma_dbs/IRFC_research/: content_hashes.json
09 Streamlit App for MCP RAG/: app.py  main.py
10 Deploy MCP Server on EC2/: anaconda_setup.md  pyproject.toml  server.py
10 Deploy MCP Server on EC2/research_chroma_dbs/Apple_Stock_Research/: content_hashes.json
(+12 files in other folders)
